<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projetos de Caixas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cadastrar_carro">Cadastro de Carro</string>
    <string name="nome_do_carro_">Nome do carro:</string>
    <string name="digite_o_nome_do_carro">Digite o nome do carro</string>
    <string name="categoria">Categoria:</string>
    <string name="normal">Hatch  </string>
    <string name="suv_">"SUV "</string>
    <string name="caminhote">Caminhonete</string>
    <string name="pickup">Pickup</string>
    <string name="largura_max_">Largura MAX (cm):</string>
    <string name="comprimento_max">Comprimento MAX (cm):</string>
    <string name="altura_max_">Altura MAX (cm):</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_test">TEST</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_activity_cadastrar_equipanto">Cadastra SubWoofer</string>
    <string name="nome_do_subwoofer_">Nome do SubWoofer:</string>
    <string name="title_activity_mostrar_all">Mostrar_all</string>
    <string name="title_activity_cadastrar_caixas">Cadastro de Caixas</string>
    <string name="title_activity_lista_veiculo_equipamento">Lista</string>
    <string name="largura_superior_">Profundidade-Baixo(cm):</string>
    <string name="largura_inferior_">Profundidade-Cima(cm):</string>
    <string name="altura_">Altura(cm):</string>
    <string name="comprimento_">Comprimento(cm):</string>
    <string name="medidas_externas_da_caixa">Medidas Externas da Caixa</string>
    <string name="mm">mm</string>
    <string name="_10">10</string>
    <string name="volume_recomendado_para_esse_subwoofer_">V.SubWoofer:</string>
    <string name="title_activity_mostrar_caixa_medidas">MostrarCaixaMedidas</string>

</resources>
