<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".CadastrarCarro" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_do_carro_" />

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/digite_o_nome_do_carro"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp" >

                <TextView
                    android:id="@+id/txtCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="210dp"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/radio0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/normal" />

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="60dp"
                                android:src="@drawable/carro32" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/radio4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/textViewC"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Sedan" />

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="60dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="50dp"
                                android:src="@drawable/sedan2" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/radio2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/textViewB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/suv_" />

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="70dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="55dp"
                                android:src="@drawable/suv2" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/radio1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/caminhote" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="60dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="8dp"
                                android:src="@drawable/cmt" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/radio3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/textViewC"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pickup" />

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="60dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="50dp"
                                android:src="@drawable/pickup2" />
                        </LinearLayout>
                    </LinearLayout>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/largura_max_" />

                <EditText
                    android:id="@+id/edtlargura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comprimento_max" />

                <EditText
                    android:id="@+id/edtComprimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura_max_" />

                <EditText
                    android:id="@+id/edtAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="230dp" >

                <Button
                    android:id="@+id/btConfirmar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ok" />

                <Button
                    android:id="@+id/btCancelar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/cancelar" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>